# hotdog

./: .gitignore  Cargo.toml  README.adoc  docker-compose.yml  hotdog-parquet.yml
scripts/: generate-stdout.rb  run-parquet-sink
src/: connection.rs  errors.rs  json.rs  kafka.rs  main.rs  merge.rs  parse.rs  rules.rs  schema.rs  serve.rs  serve_plain.rs  serve_tls.rs  settings.rs  status.rs
src/serve/: mod.rs  plain.rs  tls.rs
src/sink/: kafka.rs  mod.rs  parquet.rs
