[package]
name = "hotdog"
version = "1.1.0"
authors = ["R. Tyler Croy <rtyler@buoyantdata.com>"]
edition = "2024"

[features]
default = ["simd"]
simd = ["simd-json"]

[dependencies]
async-channel = "1"
# Needed for running tokio reactors on smol, primarily for object_store
async-compat = "0.2.4"
async-trait = "0"
# Needed for listening for TLS connections
async-tls = "0.13.0"
smol = "2"

rustls = "0.21"
rustls-pemfile = "1.0"

# Handling command line options
clap = { version = "2", features = ["yaml"] }
# Needed for time management
chrono = "0"
# Handling configuration overlays
config = { version = "=0.11.0", features = ["yaml"] }
# Needed to report metrics of hotdog's performance
dipstick = "0.9"
# Used for string replacements and other template based transformations
handlebars = "6"
# used for rule matching on JSON
#  The "sync" feature is undocumented but required in order to swap Rc for Arc
#  in the crate, allowing it to be used with futures and threads properly
jmespath = { version = "0.3.0", features = ["sync"] }
# Faster locking primitives
parking_lot = "0"
pretty_env_logger = "0"

# Needed for forwarding messages along to Kafka
# including the SSL and SASL features to ensure that this can authenticate
# against secure Kafka clusters, e.g. AWS MSK
rdkafka = { version = "0", features = ["ssl", "sasl"]}

# S3 sink
object_store = { version = "0.12", features = ["aws", "cloud"] }
arrow-array = "55"
arrow-json = "55"
arrow-schema = "55"
parquet = { version = "55", features = ["arrow", "async", "object_store"]}

# Used for rule matching
regex = "1"

# Needed for deserializing JSON messages _and_ managing our configuration
# effectively
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
# Helpful to deserialize our regular expressions directly from the
# configuration file
serde_regex = "0"

simd-json = { version = "0", optional = true}

# Needed to do clever enum/derive tricks for strings
strum = "0"
strum_macros = "0"

# For parsing the syslog formatted messages
syslog_rfc5424 = "0"
syslog_loose = "0"

# Needed for the http-based health checks
tide = "0"

# Needed to tag rules and actions with their own unique identifiers
uuid = { version = "0", features = ["v4"] }
anyhow = "1.0.97"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
ctrlc = "3.4.6"
affinity = "0.1.2"
jemallocator = "0.5.4"

[dev-dependencies]
serde_yaml = "0.9.34"

# Optimize the heck out of the release build, I have no idea what these flags
# do
[profile.release]
panic = "abort"
lto = true
codegen-units=1
opt-level="s"
